syntax = "proto3";
package pb;

option go_package = "Cold2DB/pb";  // 指定go package名称

enum EntryType {
	EntryNormal = 0;
	EntryConfChange = 1;
}

message Entry {
	EntryType entry_type = 1;
	uint64 term = 2;
	uint64 index = 3;
	bytes data = 4;
}

message SnapshotMetadata {
	ConfState conf_state = 1;
	uint64 index = 2;
	uint64 term = 3;
}

message Snapshot {
	bytes data = 1;
	SnapshotMetadata metadata = 2;
}

enum MessageType {
	MsgHup             = 0;
	MsgBeat            = 1;
	MsgProp            = 2;
	MsgApp             = 3;
	MsgAppResp         = 4;
	MsgVote            = 5;
	MsgVoteResp        = 6;
	MsgSnap            = 7;
	MsgHeartbeat       = 8;
	MsgHeartbeatResp   = 9;
	MsgUnreachable     = 10;
	MsgSnapStatus      = 11;
	MsgCheckQuorum     = 12;
	MsgTransferLeader  = 13;
	MsgTimeoutNow      = 14;
}

message Message {
	MessageType msg_type = 1;
	uint64 to = 2;
	uint64 from = 3;
	uint64 term = 4;
	uint64 log_term = 5;
	uint64 index = 6;
	repeated Entry entries = 7;
	uint64 commit = 8;
	Snapshot snapshot = 9;
	bool reject = 10;
}

message HardState {
	uint64 term = 1;
	uint64 vote = 2;
	uint64 commit = 3;
}

message ConfState {
	repeated uint64 nodes = 1;
}

enum ConfChangeType {
	ConfChangeAddNode    = 0;
	ConfChangeRemoveNode = 1;
	ConfChangeUpdateNode = 2;
}

// ConfChange is the data that attach on entry with EntryConfChange type
message ConfChange {
	ConfChangeType change_type = 1;
	// node will be add/remove
	uint64 node_id = 2;
	bytes context = 3;
}
